crates/biome_html_parser/tests/html_specs/ok/astro/comment_in_frontmatter.astro
---
const test = "//";
---

<div>{test}</div>
