crates/biome_html_parser/tests/html_specs/error/astro/nested_expression.astro
---
const items = [1, 2, 3];
---

{items.map(item => <div>{item}</div>)
